--- a/miniprogram/custom-tab-bar/index.less
+++ b/miniprogram/custom-tab-bar/index.less
@@ -9,5 +9,8 @@
 }
 
 .custom-tab-bar {
-  --td-tab-bar-active-color: #6644ff;
+  --td-tab-bar-active-bg: #b095da;
+  --td-tab-bar-active-color: #693bb1;
+  --td-tab-bar-bg-color: #e8e0f4;
+  --td-tab-bar-color: rgba(0, 0, 0, 0.4);
 }
