--- a/miniprogram/app.less
+++ b/miniprogram/app.less
@@ -9,5 +9,57 @@
 }
 
 page {
-  --td-brand-color: #6644ff;
+  --td-brand-color: #693bb1;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  background: -moz-linear-gradient(top, #b095da 0%, #e8e0f4 100%);
+  background: -webkit-linear-gradient(top, #b095da 0%, #e8e0f4 100%);
+  background: linear-gradient(to bottom, #b095da 0%, #e8e0f4 100%);
+}
+
+.head {
+  width: 100%;
+  height: 10%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.body {
+  width: 100%;
+  height: 70%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.foot {
+  width: 100%;
+  height: 20%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  text-align: center;
 }
