--- a/miniprogram/pages/home/home.less
+++ b/miniprogram/pages/home/home.less
@@ -1,15 +1,22 @@
 activity-show {
-  width: 97%;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  width: 96%;
+  // box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
-.foot {
-  .version {
-    text-align: center;
-    margin-top: 50rpx;
-    color: #999;
-    margin-bottom: 4rpx;
-    font-size: 24rpx;
-    line-height: 32rpx;
-  }
+.content-wrapper {
+  margin-top: 75rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.version {
+  text-align: center;
+  margin-top: 50rpx;
+  color: #999;
+  margin-bottom: 4rpx;
+  font-size: 24rpx;
+  line-height: 32rpx;
 }
