--- a/miniprogram/app.less
+++ b/miniprogram/app.less
@@ -1,65 +1,21 @@
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-}
-
 page {
   --td-brand-color: #693bb1;
 }
 
-.main {
+.background {
   width: 100%;
   height: 100%;
 
   position: fixed;
   top: 0;
   left: 0;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  z-index: -1;
 
   background: -moz-linear-gradient(top, #b095da 0%, #e8e0f4 100%);
   background: -webkit-linear-gradient(top, #b095da 0%, #e8e0f4 100%);
   background: linear-gradient(to bottom, #b095da 0%, #e8e0f4 100%);
 }
 
-.head {
-  width: 100%;
-  height: 10%;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.body {
-  width: 100%;
-  height: 70%;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.foot {
-  width: 100%;
-  height: 20%;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  text-align: center;
+.tab-bar-placeholder {
+  height: 112rpx;
 }
