--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,3 +1,37 @@
-<view class="container">
-  <text>User</text>
+<view class="background"></view>
+
+<user-info></user-info>
+<user-vip-card></user-vip-card>
+
+<view class="order-group-wrapper">
+  <order-group orderTagInfos="{{orderTagInfos}}" 
+    bind:onClickTop="jumpAllOrder" 
+    bind:onClickItem="jumpNav" />
 </view>
+
+<view wx:for="{{menuData}}" wx:key="item" class="cell-box">
+  <t-cell-group>
+    <t-cell
+      wx:for="{{item}}"
+      wx:for-item="xitem"
+      wx:for-index="xindex"
+      wx:key="xindex"
+      title="{{xitem.title}}"
+      arrow="{{!xitem.icon}}"
+      note="{{xitem.tit}}"
+      data-type="{{xitem.type}}"
+      bordered="{{false}}"
+      bind:click="onClickCell"
+      t-class="t-cell-padding"
+      t-class-note="order-group-note"
+      t-class-title="order-group-title"
+      t-class-left="order-group__left"
+    >
+      <t-icon name="{{xitem.icon}}" size="48rpx" slot="note" />
+    </t-cell>
+  </t-cell-group>
+</view>
+
+<view class="placeholder"></view>
+
+<view class="tab-bar-placeholder"></view>
