--- a/miniprogram/app.less
+++ b/miniprogram/app.less
@@ -19,3 +19,19 @@ page {
 .tab-bar-placeholder {
   height: 112rpx;
 }
+
+.container-vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.container-horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
