部分完成会员页

--- a/miniprogram/app.less
+++ b/miniprogram/app.less
@@ -1,5 +1,10 @@
 page {
-  --td-brand-color: #693bb1;
+  --td-brand-color: #7b51bc;
+  --td-brand-color-active: #693bb1;
+  --td-brand-color-disabled: #ede6f7;
+  --td-brand-color-focus: #9c57bf;
+  --td-brand-color-light: #b095da;
+  //--td-brand-color-light-active: #7b51bc;
 }
 
 .background {
